# fast_feature_engine

./: .gitignore  Cargo.toml  README.md  benchmark.py  config.toml  config.toml.example  pyproject.toml
benches/: engine_benchmark.rs
src/: batch.rs  config.rs  lib.rs  main.rs  models.rs  reader.rs  s3_uploader.rs
src/features/: log_return.rs  mod.rs  rolling_volatility.rs  rolling_vwap.rs  traits.rs
